[gd_scene load_steps=6 format=3 uid="uid://bp8oxmtlsjkxa"]

[ext_resource type="Script" path="res://scenes/strong_breakable_wall/strong_breakable_wall.gd" id="1_i04to"]

[sub_resource type="Gradient" id="Gradient_k4eu5"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_k11d7"]
gradient = SubResource("Gradient_k4eu5")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l2pk1"]
size = Vector2(64, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5b5kx"]
size = Vector2(259, 181)

[node name="StrongBreakableWall" type="StaticBody2D" groups=["strong_breakable_wall"]]
script = ExtResource("1_i04to")

[node name="Sprite2D" type="Sprite2D" parent="." groups=["strong_breakable_wall"]]
texture = SubResource("GradientTexture2D_k11d7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_l2pk1")

[node name="SpawnPoints" type="Node2D" parent="."]

[node name="Node2D" type="Node2D" parent="SpawnPoints"]
position = Vector2(-59.08, 0)

[node name="SpawnZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnZone"]
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_5b5kx")

[connection signal="body_entered" from="SpawnZone" to="." method="_on_spawn_zone_body_entered"]
